// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при закрытии модала поставит куку до конца распродажи 1`] = `
Array [
  Array [
    "discount-popup",
    "closed",
    Object {
      "expires": 0.125,
    },
  ],
]
`;

exports[`при клике на кнопку "купить" залогирует вас событие 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_CLICK",
    "offerId": "1085562758-1970f439",
    "originalPrice": 4958,
    "price": 2975,
    "serviceId": "package_vip",
  },
]
`;

exports[`при клике на кнопку "купить" отправит экшен на открытие диалога оплаты 1`] = `
Array [
  Object {
    "category": "cars",
    "from": "api_m_popup_discount",
    "offerId": "1085562758-1970f439",
    "platform": "PLATFORM_MOBILE",
    "services": Array [
      Object {
        "service": "package_vip",
      },
    ],
    "shouldShowSuccessTextAfter": true,
    "successText": "Опция успешно активирована",
  },
]
`;

exports[`при клике на кнопку "купить" поставит куку до конца распродажи 1`] = `
Array [
  Array [
    "discount-popup",
    "closed",
    Object {
      "expires": 0.125,
    },
  ],
]
`;

exports[`при открытии модала если до конца распродажи осталось больше 10 секунд если у пользователя только одна объява залогирует показ васов 1`] = `
Array [
  Array [
    Object {
      "category": "cars",
      "event": "VAS_SHOW",
      "offerId": "1085562758-1970f439",
      "originalPrice": 4958,
      "price": 2975,
      "serviceId": "package_vip",
    },
  ],
  Array [
    Object {
      "category": "cars",
      "event": "VAS_SHOW",
      "offerId": "1085562758-1970f439",
      "originalPrice": 1247,
      "price": 375,
      "serviceId": "package_turbo",
    },
  ],
  Array [
    Object {
      "category": "cars",
      "event": "VAS_SHOW",
      "offerId": "1085562758-1970f439",
      "originalPrice": 497,
      "price": 150,
      "serviceId": "package_express",
    },
  ],
]
`;
